--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,13 @@
+:root {
+    --main-white-color: #FFFFFF;
+    --text-color: #2E2F42;
+    --accent-color: #4D5AE5;
+    --second-bg-color: #F4F4FD;
+    --hover-color: #404BBF;
+}
+
 body {
-    font-family: 'Roboto', 'Verdana', 'Tahoma', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 16px;
     letter-spacing: 0.02em;
@@ -8,13 +16,6 @@ body {
     
 }
 
-:root {
-    --main-white-color: #FFFFFF;
-    --text-color: #2E2F42;
-    --accent-color: #4D5AE5;
-    --second-bg-color: #F4F4FD;
-    --hover-color: #404BBF;
-}
 
 a {
     text-decoration: none;
@@ -84,7 +85,6 @@ a {
 
 .hero-section {
     background-color: var(--text-color);
-    height: 600px;
 }
 
 .hero-title {
@@ -161,7 +161,6 @@ a {
 
 .footer {
     background-color: var(--text-color);
-    height: 310px;
 }
 
 .footer-logo {
@@ -216,9 +215,4 @@ a {
 
 .work-type {
     line-height: 1.5;
-}
-
-.work-description {
-    line-height: 1.5;
-    color: var(--second-bg-color)
 }
